--- a/index.html
+++ b/index.html
@@ -1,33 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>NamazTrack</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NamazTrack - Prayer Tracker</title>
+  <link href="styles.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <header>
-    <h1>NamazTrack</h1>
-    <p>Track missed Namaz & Roza easily</p>
-  </header>
-  <div class="container">
-    <label for="dob">Date of Birth:</label>
-    <input type="date" id="dob" />
+  <nav class="navbar navbar-dark bg-success">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">🕌 NamazTrack</span>
+    </div>
+  </nav>
 
-    <label for="gender">Gender:</label>
-    <select id="gender">
-      <option value="">Select</option>
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-    </select>
+  <div class="container mt-4" id="loginSection">
+    <h3 class="text-center">Login to Start Tracking</h3>
+    <input type="text" id="username" class="form-control mb-3" placeholder="Enter your name or email" />
+    <button class="btn btn-success w-100" onclick="loginUser()">Start Tracking</button>
+  </div>
 
-    <label for="periodDays">Menstruation Days per Month (women):</label>
-    <input type="number" id="periodDays" placeholder="e.g. 5" min="0" max="10" />
+  <div class="container mt-4 d-none" id="trackerSection">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h4>Welcome, <span id="userDisplay"></span></h4>
+      <button class="btn btn-outline-danger btn-sm" onclick="logout()">Logout</button>
+    </div>
 
-    <button id="calcBtn">Calculate</button>
+    <div class="mb-4">
+      <label for="datePicker" class="form-label">Select Date</label>
+      <input type="date" id="datePicker" class="form-control" />
+    </div>
 
-    <div id="output" class="result"></div>
+    <h5>Mark Completed Prayers</h5>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="fajr" />
+      <label class="form-check-label" for="fajr">Fajr</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="dhuhr" />
+      <label class="form-check-label" for="dhuhr">Dhuhr</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="asr" />
+      <label class="form-check-label" for="asr">Asr</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="maghrib" />
+      <label class="form-check-label" for="maghrib">Maghrib</label>
+    </div>
+    <div class="form-check mb-3">
+      <input class="form-check-input" type="checkbox" id="isha" />
+      <label class="form-check-label" for="isha">Isha</label>
+    </div>
+
+    <button class="btn btn-primary w-100 mb-4" onclick="saveProgress()">Save Today’s Progress</button>
+
+    <h5 class="mt-4">Your Progress Chart</h5>
+    <canvas id="progressChart" height="100"></canvas>
   </div>
 
   <script src="app.js"></script>
